--- a/punk-api-project/package.json
+++ b/punk-api-project/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://spares393.github.io/brewdogAPI-project",
   "name": "punk-api-project",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "gh-pages": "^3.2.3"
   }
 }
